Update PedigreeSampleValidator to accept empty sample names